# MakeDynamic

./: Cargo.toml  README.MD  build.sh
src/: main.rs
